updated ConditionPrimitiveType to be compatible with Java 11 streams.